# silver

./: .claudeignore  .dockerignore  .geminiignore  .geminiignore.save  .gitignore  .gitmodules  .ninja_log  AGENTS.md  AGI.md  AI-PC.md  AUTHOR.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LANGUAGE.md  LICENSE  Makefile  NOTES.md  README.md  WGPU.si  a.out  asan.supp  base.mk  bootstrap.bat  bootstrap.mk  bootstrap.sh  build  build.sf  debug_path.gdb  deps  deps.sh  docs.md  fast-shot.py  features.txt  format.cfg  gen-ninja.py  gen.py  graph.py  headers.py  (+29 more)
app/: comp.si  silver  silver-import.c  silver.c  silver.g  silver44.py  silver88.c
archive/: A-generate.c  AGI.md  WGPU.si  a10.c  import.sh  silver44.py  silver88.sf  watch.sh  web4-orbiter.md
archive/meta/: A-reflect.c
bak/: common.h  runtime.h  silver-clang.cc  silver.c  silver.h  silver44.c  silver44.h  silver44.py  silver44.si  trinity.c  trinity.h
bak/spec/: basic.si  composer.si  console.si  test.si  ux.si
base/: arc.h  array.sv  base  base.h  base.sv  closure.sv  headers.sh  import.sh  list.sv  module.c  module.h  module_loader.h  primitives.sv  string.sv
editors/vscode-ag/: extension.js  language-configuration.json  package.json
foundation/ai/: ai.ag
foundation/canvas/: canvas.cc
foundation/img/: img.ag  img.cc  img.g
foundation/ion/: ion.c
foundation/opencv/: opencv.h
foundation/test/: test.ag
foundation/test-app/: test-app.ag
foundation/test2/: test2.ag
foundation/test3/: test3.ag
foundation/trinity/: trinity.ag  trinity.g
foundry/agi/: agi.ag
foundry/ai/: ai.ag
foundry/ai-test/: ai-test.ag
foundry/asnes/: asnes.ag  asnes.c  asnes_spc.c
foundry/buttontest/: buttontest.ag
foundry/canvas/: canvas.ag
foundry/crashman/: crashman.ag
foundry/dbg/: dbg.ag  dbg.cc  dbg.g
foundry/dictest/: dictest.ag
foundry/experiment/: experiment.ag  experiment.ag.tmp.2723751.4dc35da780ff
foundry/gallery/: gallery.ag
foundry/gltf/: gltf.ag  gltf.c  gltf.prev.c
foundry/hyperspace/: .gitignore  README.md  annotate.cpp  facegen.cpp  hyperspace-migrate.py  hyperspace.ag  hyperspace.py  hyperspace_tf.py  hyperspace_torch.py  index.html  package-lock.json  package.json  project.json  vision-annotate.py  vision-record.py  vision-train-prev.py  vision-train.py  vision.py
foundry/hyperspace/torchshim/: CMakeLists.txt  torch_shim.cpp  torch_shim.h
foundry/hyperspace2/: blender_vertex_color_edit.py  hyperspace-torch.py  hyperspace2.ag  hyperspace2.py
foundry/img/: img.ag  img.cc  img.g
foundry/ion/: ion.c
foundry/knes/: knes.ag
foundry/lookrepro/: lookrepro.ag
foundry/n64/: cosim.seq  n64.ag
foundry/net/: net.ag
foundry/neural/: neural.ag
foundry/opencv/: opencv.ag  opencv.cc
foundry/orbiter/: Avatar.ag  Console.ag  Earth.ag  Editor.ag  EmuView.ag  FileList.ag  Navigate.ag  NodeList.ag  orbiter.ag
foundry/poke/: poke.ag
foundry/polaris/: extract.py  polaris.ag  train.py
foundry/project/: project.ag
foundry/random/: rand1.c  rand1.h  rand2.c  random.ag
foundry/resunzip/: resunzip.ag
foundry/reszip/: reszip.ag
foundry/rgen/: rgen.ag
foundry/spectra/: mpg123min.h  spectra-torch.py  spectra.ag  spectra.g
foundry/spectro/: spectro.ag
foundry/tbcheck/: tbcheck.ag
foundry/test/: test.ag
foundry/test-app/: test-app.ag
foundry/test2/: test2.ag
foundry/test3/: test3.ag
foundry/test4/: test4.ag
foundry/textmate/: textmate.ag
foundry/textmate_test/: textmate_test.ag
foundry/trinity/: Camera.ag  Canvas.ag  Console.ag  Style.ag  canvas.ag  element.ag  shader.ag  svg.ag  trinity.ag  trinity.bak  trinity.cc  trinity.mm  vk.ag
include/: A  A-init  A-intern  A-methods  A-public  A-reserve  import  import-init  import-intern  import-methods  import-public  import.h
libobj/: CMakeLists.txt  auto.c  list.c  prim.c  str.c  vec.h
libobj-test/: CMakeLists.txt  libobj-test  main.c
meta/: A-reflect.c
obj-cx/: CMakeLists.txt  cx_main.c  desc.txt  module.json  obj-cx  obj-cx.c  obj-cx.h  test.c  test.cx  test.sv
obj-gfx/: CMakeLists.txt  clip.c  color.h  drawing.c  drawing.h  effects.c  font.c  font.h  gfx.c  gfx.h  shaders.c  shaders.h  shape.c  shape.h  stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h  stroke.c  stroke.h  surface.c  surface.h
obj-header/: CMakeLists.txt  header.c  llist.c  obj-header  prim-out.h  prim.h  test.h  test.hh
obj-math/: CMakeLists.txt  bezier.c  bezier.h  float2.h  float3.h  math.h  matrix.c  matrix.h  obj-math.h  vec.c  vec.h
obj-math/libobj-math.dylib.dSYM/Contents/: Info.plist
obj-poly2tri/: CMakeLists.txt  advancing_front.c  advancing_front.h  cdt.c  cdt.h  poly2tri.c  poly2tri.h  primitives.c  primitives.h  sweep.c  sweep.h  sweep_context.c  sweep_context.h
obj-test/: CMakeLists.txt  main.c  obj-test
obj-test/obj-test.dSYM/Contents/: Info.plist
obj-test/obj-test.dSYM/Contents/Resources/DWARF/: obj-test
obj-ui/: CMakeLists.txt  color.c  color.h  coord.c  coord.h  element.c  element.h  obj-ui.h  ui.h  window.c  window.h
res/: test.cc  test.sf
res/docs/: test.sf
silver/: A.c  A.h  A.i  WGPU  WGPU.c  WGPU.h  WGPU.si  a.c  a.h  a.i  app.c  common.c  common.h  dyncall.s  e-nodes.c  e-nodes.h  framework.h  import  import.c  main.c  mod  nes.c  silver  silver.c  silver.code-workspace  silver.cpp  silver.h  silver.hpp  silver.i  silver.si  silver2.c  silver3.c  silver44-IR.cc  silver44.c  silver44.cc  silver44.h  silver44.py  silver44.si  tokens  tokens.c  (+6 more)
src/: A  A.c  A.g  Au  Au.c  Au.g  aclang-alt.cc.bak  aclang.cc  aclang.cc.bak  aclang.g  aclang.g.bak  aclang2.cc  aether  aether.bak  aether.c  aether.c.bak  aether.g  aether.g.bak  aether2  aether2.c  aether2.g  allvm.cc  allvm.g  autorelease.c  autorelease.h  base.c  base.h  coverage.c  dbg  dbg.cc  dbg.g  enum.c  enum.h  ether  ether.c  gen.py  graph.py  headers.py  img  img.cc  (+55 more)
supermod/: module.c  module.h  super.sv
support/: bootstrap.mk  bootstrap.sh  clean.sh  headers.py  headers.sh  import.mk  install.sh  vtable_dump.py
test/: a-test.c
testmod/: module.c  module.h  test.sv  testme.c
ui/: CMakeLists.txt  gl.c
(+89 files in other folders)
